# clang-tidy-misses

./: CMakeLists.txt  README.md  clang-tidy-analyze.sh  clang-tidy-fix.sh  run.sh
src/: main.cpp
